REFACTORING : 테스트 및 컨트롤러, 서비스 로직 및 반환값 수정