@@ -1,8 +1,9 @@
 package com.example.bookreservationserver.borrow.controller;
 
+import com.example.bookreservationserver.borrow.domain.aggregate.Borrow;
 import com.example.bookreservationserver.borrow.domain.aggregate.BorrowState;
-import com.example.bookreservationserver.borrow.dto.BorrowRequest;
 import com.example.bookreservationserver.borrow.dto.BorrowBookResponse;
+import com.example.bookreservationserver.borrow.dto.BorrowRequest;
 import com.example.bookreservationserver.borrow.dto.ReturnResponse;
 import com.example.bookreservationserver.borrow.service.BorrowSearchService;
 import com.example.bookreservationserver.borrow.service.BorrowService;
@@ -28,8 +29,7 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @ExtendWith(MockitoExtension.class)
@@ -57,10 +57,13 @@ class BorrowControllerTest {
 
     @Test
     @DisplayName("대여하기 성공")
-    void testBookBorrow() throws Exception {
+    void testBorrowSuccess() throws Exception {
         //given
-        final BorrowRequest borrowRequestDto = borrowRequestDto();
-        doReturn(borrowResponseDto()).when(borrowService).borrowBook(any());
+        final BorrowRequest borrowRequestDto = BorrowRequest.builder()
+                .borrowerId(1L).borrowerName("hongildong").bookId(2L).build();
+        final Borrow borrow = Borrow.builder().state(BorrowState.BORROWING).build();
+
+        doReturn(borrow).when(borrowService).borrowBook(argThat(b -> b.getBorrowerId() == 1));
 
         //when
         final ResultActions resultActions = mockMvc.perform(
@@ -71,12 +74,13 @@ class BorrowControllerTest {
 
         //then
         final MvcResult mvcResult = resultActions.andExpect(status().isOk()).andReturn();
-        final BorrowBookResponse borrowBookResponse = gson.fromJson(mvcResult.getResponse().getContentAsString(), BorrowBookResponse.class);
-        assertEquals(borrowBookResponse.getState(), BorrowState.BORROWING);
+        assertEquals(mvcResult.getResponse().getStatus(), 200);
+        final Borrow response = gson.fromJson(mvcResult.getResponse().getContentAsString(), Borrow.class);
+        assertEquals(response.getState(), BorrowState.BORROWING);
     }
 
     @Test
-    @DisplayName("반납 완료")
+    @DisplayName("반납 완료 성공")
     void testReturnBook() throws Exception{
         //given
         doNothing().when(returnService).returnBook(any());
@@ -94,7 +98,7 @@ class BorrowControllerTest {
     }
 
     @Test
-    @DisplayName("모든 유저의 대여 중인 기록 가져오기")
+    @DisplayName("모든 유저의 대여 중인 기록 가져오기 성공")
     void testAllBorrowing() throws Exception{
         //given
         doReturn(Collections.emptyList()).when(searchService).getAllBorrowing();
@@ -112,7 +116,7 @@ class BorrowControllerTest {
     }
 
     @Test
-    @DisplayName("유저의 모든 연체 기록 가져오기")
+    @DisplayName("유저의 모든 연체 기록 가져오기 성공")
     void testAllExpired() throws Exception{
         //given
         doReturn(Collections.emptyList()).when(searchService).getAllExpired();
@@ -130,7 +134,7 @@ class BorrowControllerTest {
     }
 
     @Test
-    @DisplayName("한사람의 모든 대여 기록 가져오기")
+    @DisplayName("한사람의 모든 대여 기록 가져오기 성공")
     void testGetMyBorrow() throws Exception{
         //given
         doReturn(Collections.emptyList()).when(searchService).getMyReservations(any());
@@ -149,10 +153,11 @@ class BorrowControllerTest {
 
 
     @Test
-    @DisplayName("한 사람의 대여중인 대여 기록 가져오기")
+    @DisplayName("한 사람의 대여중인 대여 기록 가져오기 성공")
     void testGetMyBorrowing() throws Exception{
         //given
-        doReturn(Collections.emptyList()).when(searchService).getMyBorrowings(any());
+        doReturn(List.of(Borrow.builder().state(BorrowState.BORROWING).build()))
+                .when(searchService).getMyBorrowings(1L);
 
         //when
         final ResultActions resultActions = mockMvc.perform(
@@ -163,11 +168,12 @@ class BorrowControllerTest {
         //then
         final MvcResult mvcResult = resultActions.andExpect(status().isOk()).andReturn();
         final List<BorrowBookResponse> borrowBookRespons = gson.fromJson(mvcResult.getResponse().getContentAsString(), new TypeToken<List<BorrowBookResponse>>(){}.getType());
-        assertEquals(borrowBookRespons.size(), 0);
+        assertEquals(borrowBookRespons.size(), 1);
+        assertEquals(borrowBookRespons.get(0).getState(), BorrowState.BORROWING);
     }
 
     @Test
-    @DisplayName("한 사람의 연체된 대여 기록 가져오기")
+    @DisplayName("한 사람의 연체된 대여 기록 가져오기 성공")
     void testGetMyExpired() throws Exception{
         //given
         doReturn(Collections.emptyList()).when(searchService).getMyExpired(any());
@@ -180,7 +186,8 @@ class BorrowControllerTest {
 
         //then
         final MvcResult mvcResult = resultActions.andExpect(status().isOk()).andReturn();
-        final List<BorrowBookResponse> borrowBookRespons = gson.fromJson(mvcResult.getResponse().getContentAsString(), new TypeToken<List<BorrowBookResponse>>(){}.getType());
+        final List<BorrowBookResponse> borrowBookRespons
+                = gson.fromJson(mvcResult.getResponse().getContentAsString(), new TypeToken<List<BorrowBookResponse>>(){}.getType());
         assertEquals(borrowBookRespons.size(), 0);
 
     }
